# --VRMulticopter

./: README.md
PiCam/: camera.py  main.py  stereo_camera_use_two_img_save_local.py
PiCam/picamcpp/: Makefile  basic_camera.cpp  basic_camera.py
PiCam/picamcpp/headers/: common.h
PiCam/picamcpp/src/: common.cpp
PiCam/templates/: index.html
SensorDataServer/app/: build.gradle
SensorDataServer/app/src/androidTest/java/com/example/asus/sensordataserver/: ExampleInstrumentedTest.java
SensorDataServer/app/src/main/: AndroidManifest.xml
SensorDataServer/app/src/main/java/com/example/asus/sensordataserver/: MainActivity.java
SensorDataServer/app/src/main/res/layout/: activity_main.xml
SensorDataServer/app/src/main/res/values/: strings.xml
SensorDataServer/app/src/test/java/com/example/asus/sensordataserver/: ExampleUnitTest.java
SensorDataServer/gradle/wrapper/: gradle-wrapper.properties
c_uart_interface/: CMakeLists.txt  c_uart_interface.kdev4  mavlink_control.cpp  serial_port.cpp
